Operations Maze initial checkin.

--- a/index.html
+++ b/index.html
@@ -278,6 +278,12 @@
 
             <p><a href="math/24/"><img src="images/24.png" alt="Image of 24 Game" title="" /></a></p>
 
+            <h2><a href="math/operationsmaze/">Operations Maze Game</a></h2>
+
+            <p>From the top-left square, navigate the grid of operations to find the sequence that will get the max score (or minimum score if you toggle the variant). Many configuration options and navigable with keyboard arrows.</p>
+
+            <p><a href="math/operationsmaze/"><img src="images/operationsmaze.png" alt="Image of Operations Maze Game" title="" /></a></p>
+
             <h2><a href="math/zeckendorfstheorem/">Zeckendorf's Theorem</a></h2>
 
             <p>Without using numbers neighboring one another, find the unique combination of numbers from the Fibonacci set that will sum to the target number.</p>
