n-back spelling game

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 
             <p><a href="reading/sightwordsmemory/"><img src="images/sightwordsmemory.png" alt="Image of Sight Word Memory" title="" /></a></p>
 
+            <h2><a href="reading/nbackspelling/">n-Back Spelling Game</a></h2>
+
+            <p>Type the word that the application spells for you and level up.</p>
+
+            <p><a href="reading/nbackspelling/"><img src="images/nbackspelling.png" alt="Image of n-Back Spelling Game" title="" /></a></p>
+
             <h2><a href="reading/compoundwords/">Compound Word Match Game</a></h2>
 
             <p>Build compound words from a random selection of over 1,000 words.</p>
