--- a/index.html
+++ b/index.html
@@ -358,6 +358,12 @@
 
             <p><a href="math/numbermandala/"><img src="images/numbermandela.png" alt="Image of Number Mandela" title="" /></a></p>
 
+            <h2><a href="games/WOW/">WOW! An RPG of Really Large Numbers</a></h2>
+
+            <p>Using a very simple text-based RPG engine, I built this very simple game under direction from my kids. Using this simple framework you can also adapt this example to make your own games. But do enjoy this brief adventure!</p>
+
+            <p><a href="games/WOW/"><img src="images/wow.png" alt="Image of WOW!" title="" /></a></p>
+
             <h2><a href="math/mazenavigator/">Maze Navigator</a></h2>
 
             <p>Written by <a href="https://github.com/goshdarngames/HTML5-Maze">GoshDarnGames</a>. I have updated the code to animate the rendering of the maze and have added a "Programmable" variant--under the "Options" tab--where you can input a set of moves and run them.</p>
@@ -389,6 +395,8 @@
         <div width="100%">
 
             <h1>External Links</h1>
+
+            <h2><a href="https://toytheater.com/" target="_blank">Toy Theater</a></h2>
 
             <h2><a href="http://binarypuzzle.com/" target="_blank">Binary Puzzles</a></h2>
 
