Dice Challenge enhancements, added to EE menu.
+ Rules pop-out
+ Deselect die does't trigger capture
+ X-out captured die
+ Weight dice points x1.5 option
+ Depth of dice selected

Bugs
+ 1. AI pauses uncomfortably when selecting opponent die.

--- a/index.html
+++ b/index.html
@@ -314,6 +314,12 @@
 
             <p><a href="math/vectorracer/"><img src="images/vectorracer.png" alt="Image of Vector Racer" title="" /></a></p>
 
+            <h2><a href="games/dicechallenge/">Dice Challenge</a></h2>
+
+            <p>The game <a href="">Button Men</a> or <a href="https://boardgamegeek.com/boardgame/226085/sailor-moon-crystal-dice-challenge">Sailor Moon Crystal: Dice Challenge</a>, where players roll dice and then take turns spending one die of equal or greater value to capture an opponent's die or spending multiple dice that sum to the value of an opponent's die. All spent dice are re-rolled. Player scores are the sum of all dice-sides they've captured plus one-half the sum of all dice-sides they haven't lost.</p>
+
+            <p><a href="games/dicechallenge/"><img src="images/dicechallenge.png" alt="Image of Dice Challenge" title="" /></a></p>
+
             <h2><a href="math/magicsquaretictactoe/">Magic Squre Tic Tac Toe</a></h2>
 
             <p>A isomorph of tic tac toe where the first player to get three numbers adding up to 15 wins. Try turning off the grid for a harder challenge. Comes with an unbeatable AI and the option to change the target number.</p>
