--- a/games/dicechallenge/index.html
+++ b/games/dicechallenge/index.html
@@ -164,6 +164,10 @@
   margin-left: 225px;
 }
 
+.rulespopup .rulestext {
+  top: 100px;
+}
+
 .rulespopup .rulestext h3 {
     text-align: center;
 }
