Shut the Box Infinite Game

--- a/index.html
+++ b/index.html
@@ -321,6 +321,14 @@
 
             <p><a href="games/dicechallenge/"><img src="images/dicechallenge.png" alt="Image of Dice Challenge" title="" /></a></p>
 
+            <h2><a href="math/shuttheboxinfinite/">Shut the Box Infinite</a></h2>
+
+            <p>Classic game of rolling dice and using the result to knock out numbers. This version allows the player to add rows or increase/decrease the number range to play with probability. Knocking out the numbers on the bottom row opens up knocking out the same numbers on the row(s) above.</p>
+
+            <p>Credit to <a href="https://softwareengineering.stackexchange.com/questions/311113/generate-pips-on-a-die-based-on-value">Mr. Polywhirl</a> for the dice faces.</p>
+
+            <p><a href="math/shuttheboxinfinite/"><img src="images/shuttheboxinfinite.png" alt="Image of Shut the Box Infinite" title="" /></a></p>
+
             <h2><a href="math/magicsquaretictactoe/">Magic Squre Tic Tac Toe</a></h2>
 
             <p>A isomorph of tic tac toe where the first player to get three numbers adding up to 15 wins. Try turning off the grid for a harder challenge. Comes with an unbeatable AI and the option to change the target number.</p>
