Twist Tac Toe additional computers.

--- a/games/twisttactoe/index.html
+++ b/games/twisttactoe/index.html
@@ -867,19 +867,19 @@ $(document).ready(function() {
       <div class="formrow">
           <select id="player0">
               <option value="human" selected>P1: Human</option>
-              <option value="0">P1: Easy Computer</option>
+              <option value="0">P1: Random Computer</option>
               <option value="3">P1: 3-Depth Computer</option>
-              <option value="4">P1: 4-Depth Computer</option>
               <option value="5">P1: 5-Depth Computer</option>
-              <!--option value="8">P1: Unbeatable Computer?</option-->
+              <option value="8">P1: 8-Depth Computer</option>
+              <option value="13">P1: 13-Depth Computer</option>
           </select>
           <select id="player1">
               <option value="human">P2: Human</option>
               <option value="0">P2: Random Computer</option>
               <option value="3" selected>P2: 3-Depth Computer</option>
-              <option value="4">P2: 4-Depth Computer</option>
               <option value="5">P2: 5-Depth Computer</option>
-              <!--option value="8">P2: 8-Depth Computer?</option-->
+              <option value="8">P2: 8-Depth Computer</option>
+              <option value="13">P2: 13-Depth Computer</option>
           </select>
       </div>
       <div class="formrow">
